syntax = "proto3";

package x.proxy;
option go_package = "github.com/5vnetwork/vx-core/app/configs/proxy";
import "protos/user.proto";

message VlessClientConfig {
  // ID of the account, in the form of a UUID, e.g.,
  // "66ad4540-b58c-4ad2-9926-ea63445a9b57".
  string id = 5;
  // Flow settings. May be "xtls-rprx-vision".
  string flow = 6;
  // Encryption settings. Only applies to client side, and only accepts "none"
  // for now.
  string encryption = 7;
}

message VlessServerConfig {
  repeated x.UserConfig users = 1;
}